Version 2.1.151
    Fixed a bug where players could use the party chat command without the party chat permission
    Added new config 'chat.yml'
    All chat settings that used to be in 'config.yml' are now in 'chat.yml'

    NOTES:
    The new config file lets you disable the chat system (you can disable all of it, or just party chat, and or just admin chat) without permission nodes.
    If you disable the party/admin chat, then the party/admin chat command never gets registered and attempting to use the command will result in a whole lot of nothing.
    I hate adding more config files using the old .yml system, but the config update is a ways out and this works for now.
    Reminder that the look/feel of party/admin chat is now determined by locale entries

Version 2.1.150
    Fixed an ArrayIndexOutOfBounds exception when using /skillreset
    You can now add "-s" at the end of mmoedit, addlevels, or addxp to silence the command. Which will prevent the target of the command from being informed that the command was executed.
    mcMMO should now be compatible with 1.16.4's new social features (affects Party/Admin chat)
    mcMMO Party & Admin Chat have had a complete rewrite
    Players & Console can now use color codes (including stuff like &a or [[GREEN]]) in party or admin chat
    Added new permission node 'mcmmo.chat.colors' which allows players to use color codes, negate to disallow this
    The style and look of admin/party chat is now determined by locale file instead of options in config.yml
    The default style of admin/party chat has been updated, and it may be updated again in the future
    Improved messages players receive when they toggle on or off admin or party chat
    All locale files have had 99.9% of their [[]] color codes replaced by & color codes, you can still use [[GOLD]] and stuff if you want
    Added new locale entry 'Commands.Usage.3.XP'
    Added new locale entry 'Chat.Identity.Console'
    Added new locale entry 'Chat.Style.Admin'